<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 IdleOffice Inc.
  ~
  ~ fragment_schedule.xml is part of MarcTrainTracker.
  ~
  ~ MarcTrainTracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MarcTrainTracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/loading_layout"
        layout="@layout/progress_bar_frame_layout_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/scheduleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="@dimen/elevation_card"
        android:layout_gravity="center"
        android:background="@color/white"
        android:paddingStart="@dimen/vertical_list_horizontal_padding"
        android:paddingEnd="@dimen/vertical_list_horizontal_padding"
        android:paddingTop="@dimen/vertical_list_vertical_padding"
        android:paddingBottom="@dimen/vertical_list_vertical_padding"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/schedulePrompt"
            android:text="@string/download_schedule"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTablesPenn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mt.btn"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/penn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTablesCamden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mt.btn"
            android:text="@string/camden"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTablesBrunswick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mt.btn"
            android:text="@string/brunswick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/schedulePrompt"
            android:text="@string/or_try_live_mode"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMdotSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mt.btn"
            android:text="@string/live_mode"/>
    </LinearLayout>
</FrameLayout>