<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 IdleOffice Inc.
  ~
  ~ navigation.xml is part of MarcTrainTracker.
  ~
  ~ MarcTrainTracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MarcTrainTracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_status" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alerts" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_schedule" />

</menu>
